--- a/pages/Projektmanagement.htm
+++ b/pages/Projektmanagement.htm
@@ -83,7 +83,10 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li><li> Kosten
 </li><li> Zeit
 
-</li><h2> Rahmenbedingungen
+</li></article>
+<article class="content flow">
+
+<h2> Rahmenbedingungen
 </h2><ul><li> <b>Datensicherheit
 </b></li><li> <b>Datenschutz
 </b></li><li> wirtschaftlich
@@ -98,12 +101,10 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li><li> realistisch
 </li><li> terminiert
 
-
-</article></div>
-<div class="grid-container">
+</ul></article>
 <article class="content flow">
 
-</ul><h3> Machbarkeitsanalyse
+<h3> Machbarkeitsanalyse
 </h3><ul><li> <b>Risikoanalyse
 </b></li><li> <b>Stakeholderanalyse
 
@@ -123,7 +124,10 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li><li> 4. behandeln, reduzieren,
 </li><li> 5. monitarisieren und verhindern.
 
-</li></ul><h2> Kickoff-Off-Meeting
+</li></ul></ul></article>
+<article class="content flow">
+
+<h2> Kickoff-Off-Meeting
 </h2><ul><li> Nach Planung
 </li><li> Vor Durchführung
 </li><li> Projektteam-Mitglieder
@@ -140,10 +144,6 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li><li> Sponsoren / Investoren
 </li><li> Projekt-betreffendes Interesse
 
-</article></div>
-<div class="grid-container">
-<article class="content flow">
-
 </li></ul><h3> Stakeholderanalyse
 </h3><ul><li> gemeinsame Ziele,
 </li><li> Motivationen,
@@ -156,7 +156,10 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li><li> messbarer Fortschritt
 </li><li> überwachung und berichten
 
-</li></ul><h2> Projektstrukturplan
+</li></ul></ul></article>
+<article class="content flow">
+
+<h2> Projektstrukturplan
 </h2><ul><li> Gliederung
 </li><li> Kontrollelemente
 </li><li> statische Sicht
@@ -191,11 +194,10 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li><li> Risikoanalyse
 </li><li> Lizenzen
 
-</article></div>
-<div class="grid-container">
+</li></ul></ul></ul></article>
 <article class="content flow">
 
-</li></ul></ul><h3> Projektleiter-Aufgaben
+<h3> Projektleiter-Aufgaben
 </h3><ul><li> Auf Zieldefinition mitwirken
 </li><li> Teams koordinieren
 </li><li> Aufgaben verteilen
@@ -231,7 +233,10 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li><li> Spiral,
 </li><li> V-Modell
 
-</li></ul><h4> agile Modelle
+</li></ul></ul></article>
+<article class="content flow">
+
+<h4> agile Modelle
 </h4><ul><li> <b>Scrum</b>,
 </li><li> <b>Kanban</b>,
 </li><li> Inkrementelle Vorgehensweise,
@@ -278,7 +283,10 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li><li> Buttom-up
 </li><li> Yo-Yo-Ansatz
 
-</li></ul></ul><h3> Netzplan
+</li></ul></ul></ul></article>
+<article class="content flow">
+
+<h3> Netzplan
 </h3><ul><li> zeitliche und logische Abhängigkeiten
 </li><li> Zeitpuffer
 </li><li> kritischer Pfad
@@ -305,11 +313,10 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li><li> Pufferzeiten markieren
 </li><li> Für &quot;kurze&quot; Projektdauer geeignet.
 
-</article></div>
-<div class="grid-container">
+</li></ul></ul></article>
 <article class="content flow">
 
-</li></ul><h3> Kanban Board
+<h3> Kanban Board
 </h3><ul></li><li> WIP-Limit (work in progress)
 </li><li> Pull statt Push
 </li><li> Spalten entsprechen Prozessschritten
@@ -332,7 +339,10 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li><li> souveräner Vortrag
 </li><li> zeitliche Vorgaben
 
-</li></ul><h3> SCRUM
+</li></ul></ul></article>
+<article class="content flow">
+
+<h3> SCRUM
 </h3><ul><li> agiles Framework
 </li><li> Effizienz
 </li><li> Flexibilität
@@ -360,7 +370,10 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li></ul><li> &quot;Daily Standup&quot;
 </li><ul><li> Tägliche Besprechung
 
-</li></ul></ul></ul><h3> Teambildung (Bruce Tuckman)
+</li></ul></ul></ul></ul></article>
+<article class="content flow">
+
+<h3> Teambildung (Bruce Tuckman)
 </h3><ul><li> 1. Forming, Orientierungsphase, Teams definieren
 </li><li> 2. Storming, Nahkampfphase, Rollen verteilen
 </li><li> 3. Norming, Organisationsphase, Struktur und Regeln
@@ -382,6 +395,18 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </li><ul><li> Fokus auf Interessen
 </li></ul><li> Retrospektive
 </li></ul></ul>
+
+
+</li></ul></ul></ul></ul></article>
+<article class="content flow">
+
+
+</li></ul></ul></ul></ul></article>
+<article class="content flow">
+
+
+</li></ul></ul></ul></ul></article>
+<article class="content flow">
 
 </article>
 </div>
