added file, splitted css

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@ snippets,vorlagen,lernen,verstehen,
         <style>* {border: 1px solid red;}</style>-->
 
 <!-- Layout -->
-<link rel="stylesheet" href="assets/css/main.css">
+<link rel="stylesheet" href="assets/css/style.css">
 <link rel="stylesheet" href="assets/css/menu.css">
+<link rel="stylesheet" href="assets/css/main.css">
 <link rel="stylesheet" href="assets/css/modal.css">
 <link rel="stylesheet" href="assets/css/media-queries.css">
 
@@ -38,7 +39,7 @@ snippets,vorlagen,lernen,verstehen,
 <div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
+<h1 class="jumi-logo"><a href="https://jumi.biz">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
 <nav class="menu">
@@ -50,13 +51,13 @@ snippets,vorlagen,lernen,verstehen,
 </button>
 
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
-<li><a href="https://www.jumi.biz/Content.htm"><i class="menu-icon">
+<li><a href="https://jumi.biz/Content.htm"><i class="menu-icon">
 <img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://www.jumi.biz/pages/Links.htm"><i class="menu-icon">
+<li><a href="https://jumi.biz/pages/Links.htm"><i class="menu-icon">
 <img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://www.jumi.biz/pages/Cheats.htm"><i class="menu-icon">
+<li><a href="https://jumi.biz/pages/Cheats.htm"><i class="menu-icon">
 <img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
-<li><a href="https://www.jumi.biz"><i class="menu-icon">
+<li><a href="https://jumi.biz"><i class="menu-icon">
 <img src="assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
 
 </ul>
@@ -79,7 +80,7 @@ snippets,vorlagen,lernen,verstehen,
 <!-- WTF is Jumi.biz ? -->
 <h2>WTF is Jumi.biz ?</h2>
 	<p>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen. <br><br>
-	<b><a  href="https://www.jumi.biz/Content.htm">Inhalte:</a></b><br>Administration, Webentwicklung, Programmierung, und mehr.</p>
+	<b><a  href="https://jumi.biz/Content.htm">Inhalte:</a></b><br>Administration, Webentwicklung, Programmierung, und mehr.</p>
 
 <!-- Navigation:  -->
 <div class="flow">
@@ -154,7 +155,7 @@ alt="Picture shows computer">
 
 <!-- Shownotes -->
 <h2>Shownotes</h2>
-	<ul><li>Kommasetzung mit KI: <a href="https://www.komma.ai/#" target="_blank">komma.ai</a></li>
+	<ul><li>Kommasetzung mit KI: <a href="https://komma.ai/#" target="_blank">komma.ai</a></li>
 	<li>Suchmaschine mit KI: <a href="https://you.com" target="_blank">you.com</a></li>
 	<li>HTML-Checker: <a href="https://validator.w3.org/" target="_blank">validator.w3.org</a></li>
 	<li>CSS-Checker: <a href="https://jigsaw.w3.org/css-validator/" target="_blank">jigsaw.w3.org/css-validator</a></li></ul>
