--- a/pages/IT-Sicherheit.htm
+++ b/pages/IT-Sicherheit.htm
@@ -28,8 +28,9 @@
         <style>* {border: 1px solid red;}</style>-->
 
 <!-- Layout -->
-<link rel="stylesheet" href="../assets/css/main.css">
+<link rel="stylesheet" href="../assets/css/style.css">
 <link rel="stylesheet" href="../assets/css/menu.css">
+<link rel="stylesheet" href="../assets/css/main.css">
 <link rel="stylesheet" href="../assets/css/modal.css">
 <link rel="stylesheet" href="../assets/css/media-queries.css">
 
@@ -39,7 +40,7 @@
 <div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
+<h1 class="jumi-logo"><a href="https://jumi.biz">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
 <nav class="menu">
@@ -51,13 +52,13 @@
 </button>
 
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
-<li><a href="https://www.jumi.biz/Content.htm"><i class="menu-icon">
+<li><a href="https://jumi.biz/Content.htm"><i class="menu-icon">
 <img src="../assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://www.jumi.biz/pages/Links.htm"><i class="menu-icon">
+<li><a href="https://jumi.biz/pages/Links.htm"><i class="menu-icon">
 <img src="../assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://www.jumi.biz/pages/Cheats.htm"><i class="menu-icon">
+<li><a href="https://jumi.biz/pages/Cheats.htm"><i class="menu-icon">
 <img src="../assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
-<li><a href="https://www.jumi.biz"><i class="menu-icon">
+<li><a href="https://jumi.biz"><i class="menu-icon">
 <img src="../assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
 
 </ul>
@@ -144,7 +145,7 @@
       </ul>
    </li>
    <li>
-      <a href="https://www.netzpolitik.org" title="haben ITSiG 2.0 geleaked"><b>Netzpolitik.org</b></a>
+      <a href="https://netzpolitik.org" title="haben ITSiG 2.0 geleaked"><b>Netzpolitik.org</b></a>
       <ul>
          <li>ITSiG 2.0 öffentlich zugänglich gemacht</li>
       </ul>
