--- a/pages/Projektmanagement.htm
+++ b/pages/Projektmanagement.htm
@@ -21,8 +21,9 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
         <style>* {border: 1px solid red;}</style>-->
 
 <!-- Layout -->
-<link rel="stylesheet" href="../assets/css/main.css">
+<link rel="stylesheet" href="../assets/css/style.css">
 <link rel="stylesheet" href="../assets/css/menu.css">
+<link rel="stylesheet" href="../assets/css/main.css">
 <link rel="stylesheet" href="../assets/css/modal.css">
 <link rel="stylesheet" href="../assets/css/media-queries.css">
 
@@ -32,7 +33,7 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 <div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
+<h1 class="jumi-logo"><a href="https://jumi.biz">jumi.biz</a>&#32;</h1>
 
 <!-- MENU -->
 <nav class="menu">
@@ -44,13 +45,13 @@ Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Beda
 </button>
 
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
-<li><a href="https://www.jumi.biz/Content.htm"><i class="menu-icon">
+<li><a href="https://jumi.biz/Content.htm"><i class="menu-icon">
 <img src="../assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://www.jumi.biz/pages/Links.htm"><i class="menu-icon">
+<li><a href="https://jumi.biz/pages/Links.htm"><i class="menu-icon">
 <img src="../assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://www.jumi.biz/pages/Cheats.htm"><i class="menu-icon">
+<li><a href="https://jumi.biz/pages/Cheats.htm"><i class="menu-icon">
 <img src="../assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
-<li><a href="https://www.jumi.biz"><i class="menu-icon">
+<li><a href="https://jumi.biz"><i class="menu-icon">
 <img src="../assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
 
 </ul>
