fix html content

--- a/Content.htm
+++ b/Content.htm
@@ -27,8 +27,9 @@ snippets,vorlagen,lernen,verstehen,
         <style>* {border: 1px solid red;}</style>-->
 
 <!-- Layout -->
-<link rel="stylesheet" href="assets/css/main.css">
+<link rel="stylesheet" href="assets/css/style.css">
 <link rel="stylesheet" href="assets/css/menu.css">
+<link rel="stylesheet" href="assets/css/main.css">
 <link rel="stylesheet" href="assets/css/modal.css">
 <link rel="stylesheet" href="assets/css/media-queries.css">
 
@@ -50,11 +51,11 @@ snippets,vorlagen,lernen,verstehen,
 </button>
 
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
-<li><a href="https://jumi.biz/Content"><i class="menu-icon">
+<li><a href="https://jumi.biz/Content.htm"><i class="menu-icon">
 <img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://jumi.biz/pages/Links"><i class="menu-icon">
+<li><a href="https://jumi.biz/pages/Links.htm"><i class="menu-icon">
 <img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://jumi.biz/pages/Cheats"><i class="menu-icon">
+<li><a href="https://jumi.biz/pages/Cheats.htm"><i class="menu-icon">
 <img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
 <li><a href="https://jumi.biz"><i class="menu-icon">
 <img src="assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
@@ -71,12 +72,10 @@ snippets,vorlagen,lernen,verstehen,
   <ul>
     <h3>Hardware</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+
     <h3>Netzwerktechnik</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+
   </ul>
 </article>
 <article class="content flow">
@@ -84,12 +83,10 @@ snippets,vorlagen,lernen,verstehen,
   <ul>
     <h3>Multimedia</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+
     <h3>Software</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+
   </ul>
 </article>
 <article class="content flow">
@@ -97,12 +94,10 @@ snippets,vorlagen,lernen,verstehen,
   <ul>
     <h3>Betriebssysteme</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+
     <h3>Datenschutz</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+
   </ul>
 </article>
 <article class="content flow">
@@ -110,12 +105,10 @@ snippets,vorlagen,lernen,verstehen,
   <ul>
     <h3>Qualitätssicherung</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+
     <h3>Programmierung</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+
   </ul>
 </article>
 <article class="content flow">
@@ -126,13 +119,7 @@ snippets,vorlagen,lernen,verstehen,
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+
   </ul>
 </article>
 </div>
@@ -157,11 +144,10 @@ snippets,vorlagen,lernen,verstehen,
   <ul>
     <h3>Kundenberatung</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+
     <h3>Kategorie 2</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+
   </ul>
 </article>
 <article class="content flow">
@@ -169,12 +155,10 @@ snippets,vorlagen,lernen,verstehen,
   <ul>
     <h3>Märkte und Bedarfe</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+
     <h3>Rechnungswesen</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+
   </ul>
 </article>
 <article class="content flow">
@@ -184,8 +168,7 @@ snippets,vorlagen,lernen,verstehen,
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
     <h3>Kategorie 2</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+
   </ul>
 </article>
 <article class="content flow">
