--- a/pages/Projektmanagement.htm
+++ b/pages/Projektmanagement.htm
@@ -8,8 +8,7 @@
 
 <!-- Metadaten -->
 <meta name="description" content="Projektmanagement
-"><meta name="keywords" content="
-Projektmanagement,Methoden undModelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Bedarfe,Kundenberatung/Präsentieren,Marketing,Angebotsvergleich,Hardware,Netzwerktechnik,Multimedia,Internet,Software,Betriebssysteme,Soft,areentwicklung,Qualitätssicherung,IT-Sicherheit,Datenschutz,Verträge,Leistungserbringung,Change,Management
+"><meta name="keywords" content="Projektmanagement,Methoden,Modelle,Teamarbeit,Wirtschaftlichkeit,Märkte,Bedarfe,Kundenberatung,Präsentieren,Marketing,Angebotsvergleich,Hardware,Netzwerktechnik,Multimedia,Internet,Software,Betriebssysteme,Soft,areentwicklung,Qualitätssicherung,it,sicherheit,datenschutz,Verträge,Leistungserbringung,Change,Management
 "><meta name="author" content="Jumi">
 
 <!-- Favicon -->
