--- a/pages/Kritische_Infrastrukturen.htm
+++ b/pages/Kritische_Infrastrukturen.htm
@@ -7,16 +7,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <!-- Metadaten -->
-<meta name="description" content="
-
-
-
-
-"><meta name="keywords" content="
-
-
-
-
+<meta name="description" content="Kritische Infrastrukturen
+"><meta name="keywords" content="kritis,it,sicherheit
 "><meta name="author" content="Jumi">
 
 <!-- Favicon -->
