--- a/Content.htm
+++ b/Content.htm
@@ -74,7 +74,7 @@ snippets,vorlagen,lernen,verstehen,
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
 
     <h3>Netzwerktechnik</h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/Kritische_Infrastrukturen.htm"> KRITIS BSIG</a></b><span class="kleintxt"> Kritische Infrastrukturen</span></li>
 
   </ul>
 </article>
