--- a/pages/Projektmanagement.htm
+++ b/pages/Projektmanagement.htm
@@ -194,7 +194,8 @@
 </li><li> Risikoanalyse
 </li><li> Lizenzen
 
-</li></ul></ul></ul></article>
+</li></ul></ul></ul></article></div>
+<div class="grid-container">
 <article class="content flow">
 
 <h3> Projektleiter-Aufgaben
@@ -257,8 +258,7 @@
 </li><li> mit Standards / Normen,
 </li><li> Managementsysteme
 
-</article></div>
-<div class="grid-container">
+</article>
 <article class="content flow">
 
 </li></ul><h4> Planung
@@ -339,7 +339,8 @@
 </li><li> souveräner Vortrag
 </li><li> zeitliche Vorgaben
 
-</li></ul></ul></article>
+</li></ul></ul></article></div>
+<div class="grid-container">
 <article class="content flow">
 
 <h3> SCRUM
@@ -395,6 +396,9 @@
 </li><ul><li> Fokus auf Interessen
 </li></ul><li> Retrospektive
 </li></ul></ul>
+
+</li></ul></ul></ul></ul></article>
+<article class="content flow">
 
 </li></ul></ul></ul></ul></article>
 <article class="content flow">
