fix html content

--- a/Content.htm
+++ b/Content.htm
@@ -60,65 +60,58 @@ snippets,vorlagen,lernen,verstehen,
 <li><a href="https://jumi.biz"><i class="menu-icon">
 <img src="assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
 
-</ul>
-</nav>
-</div>
-</header>
+</ul></nav>
+</div></header>
 <main>
 
 <div class="grid-container">
 <article class="content flow">
   <h2>IT-Systeme</h2>
   <ul>
-    <h3>Hardware</h3>
+  <h3>Hardware</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-
-    <h3>Netzwerktechnik</h3>
-  <li><b><a href="https://jumi.biz/pages/Kritische_Infrastrukturen.htm"> KRITIS BSIG</a></b><span class="kleintxt"> Kritische Infrastrukturen</span></li>
-
+  <h3>Betriebssysteme</h3>
+  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   </ul>
 </article>
 <article class="content flow">
   <h2>Internet</h2>
   <ul>
-    <h3>Multimedia</h3>
+  <h3>Multimedia</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-
-    <h3>Software</h3>
+  <h3>Software</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-
   </ul>
 </article>
 <article class="content flow">
   <h2>IT-Sicherheit</h2>
   <ul>
-    <h3>Betriebssysteme</h3>
+  <h3>Netzwerktechnik</h3>
+  <li><b><a href="https://jumi.biz/pages/Kritische_Infrastrukturen.htm"> KRITIS BSIG</a></b><span class="kleintxt"> Kritische Infrastrukturen</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-
-    <h3>Datenschutz</h3>
+  <h3>Datensicherheit</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-
+  <h3>Datenschutz</h3>
+  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   </ul>
 </article>
 <article class="content flow">
-  <h2>Softwareentwicklung</h2>
+  <h2>Programmierung</h2>
   <ul>
-    <h3>Qualitätssicherung</h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-
-    <h3>Programmierung</h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-
+  <li><b><a href="https://jumi.biz/pages/###"> Bash</a></b><span class="kleintxt"> Skripte</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Python</a></b><span class="kleintxt"> Skripte</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Powershell</a></b><span class="kleintxt"> Skripte</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Java</a></b><span class="kleintxt"> Skripte</span></li>
   </ul>
 </article>
 <article class="content flow">
-  <h3>Begriffe:</h3>
+  <h3>Glossar:</h3>
   <ul>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Begriff</a></b><span class="kleintxt"> 404</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Begriff</a></b><span class="kleintxt"> 404</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Begriff</a></b><span class="kleintxt"> 404</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Begriff</a></b><span class="kleintxt"> 404</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Begriff</a></b><span class="kleintxt"> 404</span></li>
 
   </ul>
 </article>
@@ -126,59 +119,12 @@ snippets,vorlagen,lernen,verstehen,
 
 <div class="grid-container">
 <article class="content flow">
-  <h3>Projektmanagement</h3>
+  <h2>Projektmanagement</h2>
   <ul>
-    <h3>Wissensfelder:</h3>
-  <li><b><a href="https://jumi.biz/pages/Projektmanagement.html"> Projektmanagement</a></b><span class="kleintxt"> <span class="kleintxt">Zusammenfassung</span></span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Integration</a></b><span class="kleintxt"> <span class="kleintxt">Koordination / Zuweisung</span></span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Umfang</a></b><span class="kleintxt"> Vorgaben / Überwachung</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Zeitplanung</a></b><span class="kleintxt"> Termine / Netzplan</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Kosten</a></b><span class="kleintxt"> Budgets / Kontrollmaßnahmen</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Qualität</a></b><span class="kleintxt"> Standards / Dokumentation</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Ressourcen</a></b><span class="kleintxt"> Arbeitsmittel / Personal</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Kommunikation</a></b><span class="kleintxt"> Hierarchie / Grundsätze</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Risikoanalyse</a></b><span class="kleintxt"> Notfallpläne / Flexibiltät</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Beschaffung</a></b><span class="kleintxt"> Kapazitäten / Bestellungen</span></li>
-</article>
-<article class="content flow">
-  <h3>Marketing</h3>
-  <ul>
-    <h3>Kundenberatung</h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-
-    <h3>Kategorie 2</h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-
-  </ul>
-</article>
-<article class="content flow">
-  <h3>Wirtschaftlichkeit</h3>
-  <ul>
-    <h3>Märkte und Bedarfe</h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-
-    <h3>Rechnungswesen</h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-
-  </ul>
-</article>
-<article class="content flow">
-  <h3>Qualitätssicherung</h3>
-  <ul>
-    <h3>Kategorie 1</h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-    <h3>Kategorie 2</h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-
-  </ul>
-</article>
-<article class="content flow">
-  <h3>Begriffe:</h3>
-  <ul>
+  <li><b><a href="https://jumi.biz/pages/Projektmanagement.html"> Alle Themen</a></b><span class="kleintxt"> Zusammenfassung<span class="kleintxt"></span></span></li>
   <li><b><a href="https://jumi.biz/pages/###"> DIN ISO 21500</a></b><span class="kleintxt"> Projektmanagement</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> DIN ISO 69901</a></b><span class="kleintxt"> Projektmanagement-Systeme</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> PRINCE 2</a></b><span class="kleintxt"> (Projects in Controlled Enviroments)</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Agiles Manifest</a></b><span class="kleintxt"> Grundsatz</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Magisches Dreieck</a></b><span class="kleintxt"> Wichtige Kenngrößen</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> SMART</a></b><span class="kleintxt"> Zieleigenschaften</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Stakeholder</a></b><span class="kleintxt"> Personengruppe</span></li>
@@ -186,12 +132,28 @@ snippets,vorlagen,lernen,verstehen,
   <li><b><a href="https://jumi.biz/pages/###"> Stakeholder-Analyse</a></b><span class="kleintxt"> Zustimmung</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Machbarkeits-Studie</a></b><span class="kleintxt"> Vorraussetzungen</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Risikoanalyse</a></b><span class="kleintxt"> Flexibilität</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Wirtschaftlichkeit</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Gantt-Diagramm</a></b><span class="kleintxt"> Zeitfenster</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Netzplan</a></b><span class="kleintxt"> Ablauf</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Kritischer Pfad</a></b><span class="kleintxt"> Pufferzeiten</span></li>
+</article>
+<article class="content flow">
+  <h3>Marketing</h3>
+  <ul>
+  <li><b><a href="https://jumi.biz/pages/###"> Märkte und Bedarfe</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Kundenberatung</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Rechnungswesen</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Datenschutz</a></b><span class="kleintxt"> Service</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Agiles Manifest</a></b><span class="kleintxt"> Grundsatz</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Qualitätssicherung</a></b><span class="kleintxt"> Produktanforderungen</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> DIN EN ISO 9000</a></b><span class="kleintxt"> Qualitätsnormen</span></li>
+  </ul>
+</article>
+<article class="content flow">
+</article>
+<article class="content flow">
+</article>
+<article class="content flow">
 </article>
 </div>
 
