--- a/pages/Projektmanagement.html
+++ b/pages/Projektmanagement.html
@@ -384,6 +384,16 @@
 </li></ul><li> Retrospektive
 </li></ul></ul>
 
+<li><b><a href="https://jumi.biz/pages/###"> Integration</a></b><span class="kleintxt"> <span class="kleintxt">Koordination / Zuweisung</span></span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Umfang</a></b><span class="kleintxt"> Vorgaben / Überwachung</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Zeitplanung</a></b><span class="kleintxt"> Termine / Netzplan</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Kosten</a></b><span class="kleintxt"> Budgets / Kontrollmaßnahmen</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Qualität</a></b><span class="kleintxt"> Standards / Dokumentation</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Ressourcen</a></b><span class="kleintxt"> Arbeitsmittel / Personal</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Kommunikation</a></b><span class="kleintxt"> Hierarchie / Grundsätze</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Risikoanalyse</a></b><span class="kleintxt"> Notfallpläne / Flexibiltät</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Beschaffung</a></b><span class="kleintxt"> Kapazitäten / Bestellungen</span></li>
+
 </article>
 </div>
 </main>
