fix html content

--- a/Content.htm
+++ b/Content.htm
@@ -66,7 +66,7 @@ snippets,vorlagen,lernen,verstehen,
 
 <div class="grid-container">
 <article class="content flow">
-  <h2>IT-Systeme</h2>
+  <h2>Datensicherheit, , , , </h2>
   <ul>
   <h3>Hardware</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
@@ -75,7 +75,7 @@ snippets,vorlagen,lernen,verstehen,
   </ul>
 </article>
 <article class="content flow">
-  <h2>Internet</h2>
+  <h2>Netzwerke</h2>
   <ul>
   <h3>Multimedia</h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
@@ -84,7 +84,7 @@ snippets,vorlagen,lernen,verstehen,
   </ul>
 </article>
 <article class="content flow">
-  <h2>Programmierung</h2>
+  <h2>Monitoring</h2>
   <ul>
   <li><b><a href="https://jumi.biz/pages/###"> Bash</a></b><span class="kleintxt"> Skripte</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Python</a></b><span class="kleintxt"> Skripte</span></li>
@@ -93,9 +93,11 @@ snippets,vorlagen,lernen,verstehen,
   </ul>
 </article>
 <article class="content flow">
-  <h2>IT-Sicherheit</h2>
+  <h2>LinuxShell</h2>
   <ul>
-  <h3>Netzwerktechnik</h3>
+  <h3>IT-Grundschutz</h3>
+  <li><b><a href="https://jumi.biz/pages/IT-Grundschutz.htm"> Elementare Gefährdungen</a></b><span class="kleintxt">
+  <li><b><a href="https://jumi.biz/pages/Kritische_Infrastrukturen.htm"> KRITIS BSIG</a></b><span class="kleintxt">
   <li><b><a href="https://jumi.biz/pages/Kritische_Infrastrukturen.htm"> KRITIS BSIG</a></b><span class="kleintxt"> Kritische Infrastrukturen</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <h3>Datensicherheit</h3>
@@ -105,7 +107,7 @@ snippets,vorlagen,lernen,verstehen,
   </ul>
 </article>
 <article class="content flow">
-  <h3>Glossar:</h3>
+  <h2>Dateisysteme</h2>
   <ul>
   <li><b><a href="https://jumi.biz/pages/###"> Begriff</a></b><span class="kleintxt"> 404</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Begriff</a></b><span class="kleintxt"> 404</span></li>
