--- a/pages/Projektmanagement.html
+++ b/pages/Projektmanagement.html
@@ -69,7 +69,7 @@
 </li><li> 3. steuern, kontrollieren
 </li><li> 4. abschließen
 
-</li></ul><h2> Projekte sind...
+</li></ul></ul><h2> Projekte sind...
 </h2><ul><li> befristet
 </li><li> innovativ
 </li><li> risikohaft
@@ -83,7 +83,7 @@
 </li><li> Kosten
 </li><li> Zeit
 
-</li>
+</li></ul>
 
 <h2> Rahmenbedingungen
 </h2><ul><li> <b>Datensicherheit
@@ -382,15 +382,15 @@
 </li></ul><li> Retrospektive
 </li></ul></ul>
 
-<li><b><a href="https://jumi.biz/pages/###"> Integration</a></b><span class="kleintxt"> <span class="kleintxt">Koordination / Zuweisung</span></span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Umfang</a></b><span class="kleintxt"> Vorgaben / Überwachung</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Zeitplanung</a></b><span class="kleintxt"> Termine / Netzplan</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Kosten</a></b><span class="kleintxt"> Budgets / Kontrollmaßnahmen</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Qualität</a></b><span class="kleintxt"> Standards / Dokumentation</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Ressourcen</a></b><span class="kleintxt"> Arbeitsmittel / Personal</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Kommunikation</a></b><span class="kleintxt"> Hierarchie / Grundsätze</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Risikoanalyse</a></b><span class="kleintxt"> Notfallpläne / Flexibiltät</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Beschaffung</a></b><span class="kleintxt"> Kapazitäten / Bestellungen</span></li>
+<li><b> Integration</a></b><span class="kleintxt"> <span class="kleintxt">Koordination / Zuweisung</span></span></li>
+<li><b> Umfang</a></b><span class="kleintxt"> Vorgaben / Überwachung</span></li>
+<li><b> Zeitplanung</a></b><span class="kleintxt"> Termine / Netzplan</span></li>
+<li><b> Kosten</a></b><span class="kleintxt"> Budgets / Kontrollmaßnahmen</span></li>
+<li><b> Qualität</a></b><span class="kleintxt"> Standards / Dokumentation</span></li>
+<li><b> Ressourcen</a></b><span class="kleintxt"> Arbeitsmittel / Personal</span></li>
+<li><b> Kommunikation</a></b><span class="kleintxt"> Hierarchie / Grundsätze</span></li>
+<li><b> Risikoanalyse</a></b><span class="kleintxt"> Notfallpläne / Flexibiltät</span></li>
+<li><b> Beschaffung</a></b><span class="kleintxt"> Kapazitäten / Bestellungen</span></li>
 
 </article>
 </div>
