--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@ snippets,vorlagen,lernen,verstehen,
 
 <!-- WTF is Jumi.biz ? -->
 <h2>WTF is Jumi.biz ?</h2>
-	<p>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen. <br><br>
-	<b><a  href="https://jumi.biz/Content.htm">Inhalte:</a></b><br>Administration, Webentwicklung, Programmierung, und mehr.</p>
+	<p>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen. </p>
+	<a href="https://jumi.biz/Content.htm"><h2>Inhalte:</h2></a>
+	<p>Datensicherheit, Netzwerke, Monitoring, LinuxShell, Dateisysteme, und mehr.</p>
 
 <!-- Navigation:  -->
 <div class="flow">
