created html content

--- a/404.html
+++ b/404.html
@@ -7,12 +7,12 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <!-- Favicon -->
-<link rel="icon" href="assets/img/ico/jumi.ico">
+<link rel="icon" href="../assets/img/ico/jumi.ico">
 <title>jumi|404</title>
 
 <!-- Layout -->
-<link rel="stylesheet" href="assets/css/main.css">
-<link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="../assets/css/main.css">
+<link rel="stylesheet" href="../assets/css/style.css">
 
 </head>
 <body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
@@ -20,7 +20,7 @@
 <div class="header-content">
 
 <!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
+<h1 class="jumi-logo"><a href="https://jumi.biz">jumi.biz</a>&#32;</h1>
 </div>
 </header>
 <main>
