created html content

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@ snippets,vorlagen,lernen,verstehen,
     <p>Diese Website ist im Aufbau.</p>
 	<ul class="kleintxt"><li>Update[2022-11]: Neue Snippets</li>
 	<li>Update[2023-03]: Neue index.php</li>
-	<li>Upgrade[2023-08]: Struktur verbessert</li></ul>
+	<li>Upgrade[2023-08]: Struktur verbessert</li>
+	<li>Upgrade[2023-10]: Neue Content Struktur</li></ul>
 
 <!-- WTF is Jumi.biz ? -->
 <h2>WTF is Jumi.biz ?</h2>
