--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ snippets,vorlagen,lernen,verstehen,
 <h2>WTF is Jumi.biz ?</h2>
 	<p>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen. </p>
 	<a href="https://jumi.biz/Content.htm"><h2>Inhalte:</h2></a>
-	<p>Datensicherheit, Netzwerke, Monitoring, LinuxShell, Dateisysteme, und mehr.</p>
+	<p class="kleintxt">Datensicherheit, Netzwerke, Monitoring, LinuxShell, Dateisysteme, und mehr.</p>
 
 <!-- Navigation:  -->
 <div class="flow">
