--- a/404.html
+++ b/404.html
@@ -10,9 +10,205 @@
 <link rel="icon" href="../assets/img/ico/jumi.ico">
 <title>jumi|404</title>
 
+<!-- Page-autorefresh Debugger -->
+        <meta http-equiv="refresh" content="6">
+        <style>* {border: 1px solid red;}</style>
+<!-- Page-autorefresh Debugger -->
+
 <!-- Layout -->
 <link rel="stylesheet" href="../assets/css/main.css">
-<link rel="stylesheet" href="../assets/css/style.css">
+<style>
+body {
+    min-height: 100vh;
+    letter-spacing: 0.1rem;
+    background-color: #000;
+    margin: 0;
+    padding: 0;
+
+    /* Set core body defaults */
+    text-rendering: optimizeSpeed;
+    line-height: 1.5;
+
+    /* Footer-unten-halten-Loesung */
+    height: 100%;
+    position: relative;
+}
+@font-face {
+     font-family: 'Sarpanch';
+     font-style: normal;
+     src: url('https://jumi.biz/assets/fonts/sarpanch-v11-latin-regular.woff2') format('woff2')
+    /* Super Modern Browsers */
+    , url('https://jumi.biz/assets/fonts/sarpanch-v11-latin-regular.woff') format('woff')
+    /* Modern Browsers */
+    , url('https://jumi.biz/assets/fonts/sarpanch-v11-latin-regular.ttf') format('truetype')
+    /* Safari, Android, iOS */
+    , url('https://jumi.biz/assets/fonts/sarpanch-v11-latin-regular.svg#Sarpanch') format('svg')
+    /* Legacy iOS */ ;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+/* Standard-Stil für alles Linktexte ohne Klasse */
+a:not([class]) {
+    text-decoration-skip-ink: auto;
+}
+p {
+    display: inline-block;
+    line-height: 1.337rem;
+}
+/* Keine Listenpunkte */
+ul,ol,li {list-style: none;}
+img {width: 100%;}
+header {
+    text-shadow: 1.5px 2px black;
+    background: #131313;
+    color: #00f0f0;
+    padding: 2em 4em 1.5em 1.5em;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    font-family: 'Sarpanch', sans-serif;
+    box-shadow:
+        rgba(0, 240, 240, 0.4) 0px 2px 4px,
+        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
+        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
+}
+header::after {
+    content: "";
+    clear: both;
+    display: block;
+}
+.header-content {
+    width: 95%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    letter-spacing: 0.2em;
+}
+.jumi-logo {
+    top: 0.5em;
+    left: 1em;
+    position: absolute;
+    font-size: 1.337rem;
+    margin: 0;
+}
+.jumi-logo a {
+    cursor: pointer;
+    animation: neon .08s ease-in-out infinite alternate;
+    text-decoration: none;
+    color: inherit;
+}
+footer {
+    position: absolute;
+    display: block;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 1rem 0 4rem 0;
+    background-color: #131313;
+    color: #ffbfea;
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    box-shadow:
+        rgba(0, 240, 240, 0.4) 0px 2px 4px,
+        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
+        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
+}
+/* Scrollleiste ausblenden */
+body::-webkit-scrollbar {
+    width: 0.5em;
+    display: none;
+}
+.kleintxt {font-size:small;bottom: 1.3rem;}
+@keyframes clipPathCircleOpen {
+     0% {clip-path: circle(0% at top right);}
+     100% {clip-path: circle(250% at top right);}
+}
+@keyframes clipPathCircleClose {
+     0% {clip-path: circle(250% at top right);}
+     100% {clip-path: circle(0% at top right);}
+}
+@keyframes neon { /* Neon Effect */
+     from {text-shadow:
+          0 0 6px rgba(202,228,225,0.92),
+          0 0 30px rgba(202,228,225,0.34),
+          0 0 12px rgba(30,132,242,0.52),
+          0 0 21px rgba(30,132,242,0.92),
+          0 0 34px rgba(30,132,242,0.78),
+          0 0 54px rgba(30,132,242,0.92);
+    }
+     to {text-shadow:
+          0 0 6px rgba(202,228,225,0.98),
+          0 0 30px rgba(202,228,225,0.42),
+          0 0 12px rgba(30,132,242,0.58),
+          0 0 22px rgba(30,132,242,0.84),
+          0 0 38px rgba(30,132,242,0.88),
+          0 0 60px rgba(30,132,242,1);
+    }
+}
+@keyframes bg-animation {
+     0% {transform: translate(0,0)}
+     10% {transform: translate(-5%,-5%)}
+     20% {transform: translate(-10%,5%)}
+     30% {transform: translate(5%,-10%)}
+     40% {transform: translate(-5%,15%)}
+     50% {transform: translate(-10%,5%)}
+     60% {transform: translate(15%,0)}
+     70% {transform: translate(0,10%)}
+     80% {transform: translate(-15%,0)}
+     90% {transform: translate(10%,5%)}
+     100% {transform: translate(5%,0)}
+}
+main {
+    color: #ebebd3;
+    padding-top: 1rem;
+    padding-bottom: 8rem;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+}
+.content > h1 {
+    color: #ffbfea; /* pink */
+    font-family: 'Sarpanch', sans-serif;
+    animation: neon .08s ease-in-out infinite alternate;
+    text-shadow: none;
+    font-size: 2.3rem;
+}
+.content > h2, h3, h4 {
+    text-shadow: 1.5px 2px black;
+    color: #8dd88e; /* grün */
+}
+.content a,
+.content b {color: #00f0f0;} /* blau */
+.content a:hover,
+.content a:focus {
+    text-decoration: none;
+    color: #ffbfea; /* pink */
+    animation: neon .08s ease-in-out infinite alternate;
+    text-shadow: none;
+}
+.content b {color: #00f0f0;}
+.content {
+    margin: 30px auto 40px auto;
+    width: 800px;
+    text-align: center;
+    text-shadow: 1.5px 2px black;
+    align-items: center;
+    justify-content: space-around;
+}
+.flex {
+    display: flex;
+    gap: var(--gap, 0.6rem);
+}
+.search-container {
+    width: 800px;
+    text-align: center;
+}
+
+</style>
 
 </head>
 <body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
@@ -25,15 +221,24 @@
 </header>
 <main>
 
-<div class="content jumi-email">
+<div class="content">
 <h1>404 Page Not Found</h1>
-<h1><b>¯\_(ツ)_/¯</b></h1>
+<h2><b>¯\_(ツ)_/¯</b></h2>
 <p>Diese Seite ist nicht verfügbar...<br>
 ...oder in einem anderen Verzeichnis.</p>
-<br>
-<h2>contact&#64;jumi.biz</h2>
-</div>
+<div class="search-container">
+    <form accept-charset="UTF-8" id="search" action="/search" method="get">
+    <label for="search">Find Keywords:</label>
+    <input type="text" name="q">
 
+    <input class="btn" type="submit" value="Search">
+    </form>
+</div>
+<p class="kleintxt">Unterstützung per Email: </p>
+<h2>webmaster&#64;jumi.biz</h2>
+</div>
+<footer>
+</footer>
 </main>
 </body>
 </html>
